lang/examples/good/02-02-comparison.wdr
fun main(): Void {
  printBool(4 <= 2);
  printBool(4 < 2);

  printBool(4 >= 2);
  printBool(4 > 2);

  printBool(4 == 2);
  printBool(4 == 4);
  printBool(4 != 2);

  printBool((1 + 1) * 2 <= 2);
  printBool((1 + 1) * 2 < 2);

  printBool((1 + 1) * 2 >= 2);
  printBool((1 + 1) * 2 > 2);

  printBool((1 + 1) * 2 == 2);
  printBool((1 + 1) * 2 == 4);
  printBool((1 + 1) * 2 != 2);

  return;
}