lang/examples/bad/02-05-comparison-types.wdr
fun main(): Void {
  printBool(True <= 1);

  return;
}